err/paragram.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/__multiprocessing'...
Compiling './lib/python3.5/site-packages/__multiprocessing/connection.py'...
***   File "./lib/python3.5/site-packages/__multiprocessing/connection.py", line 109
    raise TypeError, 'authkey should be a byte string'
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/__multiprocessing/dummy'...
Compiling './lib/python3.5/site-packages/__multiprocessing/forking.py'...
***   File "./lib/python3.5/site-packages/__multiprocessing/forking.py", line 135
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/__multiprocessing/managers.py'...
***   File "./lib/python3.5/site-packages/__multiprocessing/managers.py", line 155
    except (OSError, IOError, KeyboardInterrupt, SystemExit), e:
                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/__multiprocessing/pool.py'...
***   File "./lib/python3.5/site-packages/__multiprocessing/pool.py", line 69
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/__multiprocessing/process.py'...
***   File "./lib/python3.5/site-packages/__multiprocessing/process.py", line 236
    except SystemExit, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/__multiprocessing/queues.py'...
***   File "./lib/python3.5/site-packages/__multiprocessing/queues.py", line 247
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/__multiprocessing/sharedctypes.py'...
***   File "./lib/python3.5/site-packages/__multiprocessing/sharedctypes.py", line 149
    exec template % ((name,)*7) in d
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/__multiprocessing/util.py'...
***   File "./lib/python3.5/site-packages/__multiprocessing/util.py", line 130
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/paragram'...
Compiling './lib/python3.5/site-packages/paragram/graph.py'...
***   File "./lib/python3.5/site-packages/paragram/graph.py", line 46
    print "waiting for graph input..."
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/paragram/managers.py'...
***   File "./lib/python3.5/site-packages/paragram/managers.py", line 30
    except KeyboardInterrupt, e:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/paragram/process'...
Compiling './lib/python3.5/site-packages/paragram/process/base_process.py'...
***   File "./lib/python3.5/site-packages/paragram/process/base_process.py", line 220
    except Exit, e:
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/paragram-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Compiling './lib/python3.5/site-packages/process_ring.py'...
***   File "./lib/python3.5/site-packages/process_ring.py", line 17
    print "%0.3f: process %s running..." % (offset(), id,)
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
